--- a/criptografie/criptoapp/templates/index.html
+++ b/criptografie/criptoapp/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "criptoapp/base.html" %}
 
 {% block content %}
+    <a href="{% url 'criptoapp:page' %}">To a page!</a>
     <p>In index</p>
 {% endblock content %}
